<resources>
    <string name="app_name">FudEdu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello Registration fragment</string>
    <string name="forgot_password">Forgot password</string>
    <string name="login">Login</string>
    <string name="password">password</string>

    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="the_logo">the logo</string>
    <string name="sign_up_now">Sign up as</string>
    <string name="i_am_a_student">A student</string>
    <string name="i_am_a_lecturer">A lecturer</string>
    <string name="sign_up_as_a_student">Sign up as a Student</string>
    <string name="sign_up_as_a_lecturer">Sign up as a Lecturer</string>
    <string name="register">Register</string>
    <string name="phone_number">Phone Number</string>
    <string name="home">Home</string>
    <string name="class_group">Welcome to {className} Class</string>

    <string-array name="Faculties">
        <item> Computing </item>
        <item> Medicine </item>
        <item> Science </item>
        <item> Art &amp; Social Science </item>
        <item> Agric </item>
    </string-array>
    <string-array name="Gender">
        <item> Male </item>
        <item> Female </item>
    </string-array>

</resources>