<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<data>

    <variable
        name="viewModel"
        type="com.enike.fudedu.Login.LoginViewModel" />
</data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Login.LoginFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:paddingBottom="50dp">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:contentDescription="@string/the_logo"
                    android:src="@drawable/ic_vectorlogo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email"
                    verify_email="@{viewModel.emailError}"
                    style="@style/Widget.FudEdu.EditTextFields"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:hint="@string/email"
                    app:layout_constraintTop_toBottomOf="@+id/logo">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailfield"
                        android:text="@={viewModel.email}"
                        android:inputType="textEmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/opensans_regular"
                        android:padding="15dp"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password"
                    verify_password="@{viewModel.passwordError}"
                    style="@style/Widget.FudEdu.EditTextFields"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    app:layout_constraintTop_toBottomOf="@+id/email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordfield"
                        android:text="@={viewModel.password}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/opensans_regular"
                        android:padding="15dp"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/fogotpassword"
                    style="@style/Widget.FudEdu.TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textColor="@color/orange"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/password" />

                <com.github.ybq.android.spinkit.SpinKitView
                    android:id="@+id/spin_kit"
                    android:visibility="invisible"
                    style="@style/SpinKitView.CubeGrid"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    app:SpinKit_Color="?attr/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="@+id/loginbtn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/loginbtn"
                    app:layout_constraintTop_toBottomOf="@+id/loginbtn"
                    app:layout_constraintTop_toTopOf="@+id/loginbtn" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/loginbtn"
                    style="@style/Widget.FudEdu.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->viewModel.login()}"
                    android:padding="15dp"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/fogotpassword" />

                <TextView
                    android:id="@+id/signup"
                    style="@style/Widget.FudEdu.TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up_now"
                    android:textColor="@color/orange"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/loginbtn" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/i_am_a_student"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/LeftMargin"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="@dimen/RightMargin"
                    android:fontFamily="@font/opensans_regular"
                    android:padding="15dp"
                    android:text="@string/i_am_a_student"
                    android:textAllCaps="false"
                    app:layout_constraintBaseline_toBaselineOf="@+id/i_am_a_lecturer"
                    app:layout_constraintEnd_toStartOf="@id/i_am_a_lecturer"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/signup" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/i_am_a_lecturer"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/LeftMargin"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="@dimen/RightMargin"
                    android:fontFamily="@font/opensans_regular"
                    android:padding="15dp"
                    android:text="@string/i_am_a_lecturer"
                    android:textAllCaps="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/i_am_a_student"
                    app:layout_constraintTop_toBottomOf="@id/signup" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </FrameLayout>
</layout>