<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UI.StudentReg.StudentRegisteration">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="@android:color/white">

            <TextView
                style="@style/TextAppearance.AppCompat.Menu"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/opensans_semibold"
                android:gravity="center"
                android:text="@string/sign_up_as_a_student"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:id="@+id/scrollview"
            android:scrollbars="none"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/groupcode"
                    style="@style/Widget.FudEdu.EditTextFields"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:hint="Group Code"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:inputType="number"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/opensans_regular"
                        android:padding="15dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phonenumber"
                    style="@style/Widget.FudEdu.EditTextFields"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:hint="@string/phone_number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lastName">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:inputType="phone"
                        android:id="@+id/phonenumberfield"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/opensans_regular"
                        android:padding="15dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/firstname"
                    style="@style/Widget.FudEdu.EditTextFields"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:hint="First Name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/groupcode">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:id="@+id/firstnamefield"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/opensans_regular"
                        android:padding="15dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lastName"
                    style="@style/Widget.FudEdu.EditTextFields"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:hint="Last Name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/firstname">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:id="@+id/lastnamefield"
                        android:singleLine="true"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/opensans_regular"
                        android:padding="15dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/Email"
                    style="@style/Widget.FudEdu.EditTextFields"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:hint="Email"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/phonenumber">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:id="@+id/emailfield"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/opensans_regular"
                        android:padding="15dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/gender"
                    style="@style/Widget.FudEdu.DropDown"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/faculty"
                    app:layout_constraintEnd_toStartOf="@id/faculty"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/Email">

                    <AutoCompleteTextView
                        android:hint="Gender"
                        android:inputType="none"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:id="@+id/genderfield"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/opensans_regular"
                        android:padding="15dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/faculty"
                    style="@style/Widget.FudEdu.DropDown"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/gender"
                    app:layout_constraintTop_toBottomOf="@id/Email">

                    <AutoCompleteTextView
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:hint="Faculty"
                        android:inputType="none"
                        android:id="@+id/facultyfield"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/opensans_regular"
                        android:padding="15dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/department"
                    style="@style/Widget.FudEdu.EditTextFields"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:hint="department"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/gender">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:id="@+id/departmentfield"
                        android:singleLine="true"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/opensans_regular"
                        android:padding="15dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/firstPassword"
                    style="@style/Widget.FudEdu.EditTextFields"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:hint="Password"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/department">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:inputType="textPassword"
                        android:id="@+id/passwordfield"
                        android:singleLine="true"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/opensans_regular"
                        android:padding="15dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/confirmPassword"
                    style="@style/Widget.FudEdu.EditTextFields"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:hint="@string/confirm_password"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/firstPassword">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:id="@+id/confirmpasswordfield"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/opensans_regular"
                        android:padding="15dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.github.ybq.android.spinkit.SpinKitView
                    android:id="@+id/spin_kit"
                    android:visibility="invisible"
                    style="@style/SpinKitView.CubeGrid"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    app:SpinKit_Color="?attr/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="@+id/registerStudentsBnt"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/registerStudentsBnt"
                    app:layout_constraintTop_toBottomOf="@+id/registerStudentsBnt"
                    app:layout_constraintTop_toTopOf="@+id/registerStudentsBnt" />

                <com.google.android.material.button.MaterialButton
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="30dp"
                    android:id="@+id/registerStudentsBnt"
                    style="@style/Widget.FudEdu.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/register"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textAllCaps="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/confirmPassword" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>